Простая поддержка /players и кое-какие улучшения.